[package]
name = "mastodon2memos"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
megalodon = "0.14"
reqwest = { version = "0.11", features = ["json"] }
html2md = "0.2"
regex = "1.10"
dotenvy = "0.15"
serde_json = "1.0"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
