[package]
name = "wallhaven-mastodon-header"
version = "0.1.0"
edition = "2021"
authors = ["Kepler"]
description = "A Rust utility to synchronize Wallhaven cyberpunk imagery with Mastodon profile headers."

[dependencies]
# Environment variable management
dotenv = "0.15"

# HTTP client configuration
# Default features are disabled to bypass native-tls (OpenSSL) dependencies,
# utilizing 'rustls-tls' for standalone cross-platform compatibility.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
