[package]
name = "mastodon-unfollower-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Kepler"]

[dependencies]
# Synchronous HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SMTP client for v0.10.x
# Feature 'smtp-transport' is the correct name for this version.
# 'native-tls' provides SSL/TLS support for secure relay communication.
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "hostname", "builder", "native-tls"] }

# Regular expression engine for Link header parsing
regex = "1"

# Error handling
anyhow = "1.0"

# Environment management
dotenv = "0.15"
